add post presentation

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -19,7 +19,7 @@ dateFormat = "2 January 2006"
   bio = "A little bit about you"
    links = [
     { email = "mailto:josexp93@gmail.com" },
-  #   { link = "https://link-to-some-website.com/" },
+    { link = "https://link-to-some-website.com/" },
   #   { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
   #   { apple = "https://www.apple.com" },
   #   { blogger = "https://username.blogspot.com/" },
