--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -30,7 +30,7 @@ defaultBackgroundImage = "../assets/img/background_img.jpg" # used as default fo
  # showMenu = true
   showCopyright = true
   showThemeAttribution = true
-  showAppearanceSwitcher = true
+  showAppearanceSwitcher = false
   showScrollToTop = true
 
 [homepage]
