--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -6,7 +6,7 @@ weight = 1
 rtl = false
 
 title = "jose@simon:~"
-logo = "img/logo.png"
+logo = "img/favicon-32x32.png"
 description = "Jose Simon's site"
 # copyright = "Copy, _right?_ :thinking_face:"
 
@@ -16,7 +16,7 @@ dateFormat = "2 January 2006"
   name = "Jose Simon"
   image = "img/avatar.png"
   headline = "Full-stack developer"
-  bio = "A little bit about you"
+  bio = "On board the Nostromo"
    links = [
     { email = "mailto:josexp93@gmail.com" },
     { link = "https://leetcode.com/jaxp42/" },
