--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -38,7 +38,7 @@ defaultBackgroundImage = "../assets/img/background_img.jpg" # used as default fo
   #homepageImage = "IMAGE.jpg" # used in: hero, and card
   showRecent = true
   showRecentItems = 5
-  showMoreLink = false
+  showMoreLink = true
   showMoreLinkDest = "/posts"
   cardView = false
   cardViewScreenWidth = false
@@ -46,7 +46,7 @@ defaultBackgroundImage = "../assets/img/background_img.jpg" # used as default fo
 
 [article]
   #showDate = true
-  showViews = true
+  showViews = false
   #showLikes = true
   showDateUpdated = false
   showAuthor = true
@@ -77,11 +77,11 @@ defaultBackgroundImage = "../assets/img/background_img.jpg" # used as default fo
   layoutBackgroundBlur = true # only used when heroStyle equals background or thumbAndBackground
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
   showBreadcrumbs = false
-  showSummary = false
+  showSummary = true
   #showViews = true
   #showLikes = true
   showTableOfContents = true
-  showCards = true
+  showCards = false
   groupByYear = false
   cardView = false
   cardViewScreenWidth = false
