added post group_formations and style changes

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -21,6 +21,13 @@
   pageRef = "posts/coding"
   weight = 20
 
+  [[main]]
+  name = "Theory"
+  parent = "Blog"
+  pageRef = "posts/theory"
+  weight = 20
+
+
 [[main]]
   name = "HTB"
   parent = "Blog"
